--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-ejs-layouts": "^2.0.0",
-    "mongoose": "^4.4.11"
+    "express-session": "^1.13.0",
+    "mongoose": "^4.4.11",
+    "request": "^2.70.0"
   },
   "devDependencies": {},
   "scripts": {
